// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Presentational 테스트 로그인 하고 알림창을 열었을 경우 1`] = `
<div>
  <header
    class="mainBlock"
  >
    <div
      class="subBlock"
    >
      <div
        class="title"
      >
        <a
          href="/"
        >
          MyPlace
        </a>
      </div>
      <ul
        class="navigationBlock"
      >
        <li
          class="navigationName"
        >
          <a
            href="/findplace"
          >
            장소찾기
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/community/postlist"
          >
            커뮤니티
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/contribute"
          >
            기여하기
          </a>
        </li>
      </ul>
      <div
        class="userBlock"
        data-testid="login"
      >
        <p
          class="userInfo"
        >
          test
          님 반갑습니다
        </p>
        <button
          aria-label="notice"
          class="notice"
          data-testid="changeNoticeModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.377 10.573a7.63 7.63 0 0 1-.383-2.38V6.195a5.115 5.115 0 0 0-1.268-3.446 5.138 5.138 0 0 0-3.242-1.722c-.694-.072-1.4 0-2.07.227-.67.215-1.28.574-1.794 1.053a4.923 4.923 0 0 0-1.208 1.675 5.067 5.067 0 0 0-.431 2.022v2.2a7.61 7.61 0 0 1-.383 2.37L2 12.343l.479.658h3.505c0 .526.215 1.04.586 1.412.37.37.885.586 1.412.586.526 0 1.04-.215 1.411-.586s.587-.886.587-1.412h3.505l.478-.658-.586-1.77zm-4.69 3.147a.997.997 0 0 1-.705.299.997.997 0 0 1-.706-.3.997.997 0 0 1-.3-.705h1.999a.939.939 0 0 1-.287.706zm-5.515-1.71l.371-1.114a8.633 8.633 0 0 0 .443-2.691V6.004c0-.563.12-1.113.347-1.616.227-.514.55-.969.969-1.34.419-.382.91-.67 1.436-.837.538-.18 1.1-.24 1.65-.18a4.147 4.147 0 0 1 2.597 1.4 4.133 4.133 0 0 1 1.004 2.776v2.01c0 .909.144 1.818.443 2.691l.371 1.113h-9.63v-.012z"
            />
          </svg>
        </button>
        <button
          aria-label="mypage"
          class="mypage"
          data-testid="changePageModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2A10.13 10.13 0 0 0 2 12a10 10 0 0 0 4 7.92V20h.1a9.7 9.7 0 0 0 11.8 0h.1v-.08A10 10 0 0 0 22 12 10.13 10.13 0 0 0 12 2zM8.07 18.93A3 3 0 0 1 11 16.57h2a3 3 0 0 1 2.93 2.36 7.75 7.75 0 0 1-7.86 0zm9.54-1.29A5 5 0 0 0 13 14.57h-2a5 5 0 0 0-4.61 3.07A8 8 0 0 1 4 12a8.1 8.1 0 0 1 8-8 8.1 8.1 0 0 1 8 8 8 8 0 0 1-2.39 5.64z"
            />
            <path
              d="M12 6a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4zm0 6a1.91 1.91 0 0 1-2-2 1.91 1.91 0 0 1 2-2 1.91 1.91 0 0 1 2 2 1.91 1.91 0 0 1-2 2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="mainBlock"
    >
      <div
        class="subBlock"
      >
        <div
          class="loading"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="loading"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Presentational 테스트 반응형 테스트 모바일인 경우 1`] = `
<div>
  <header
    class="mainBlock"
  >
    <div
      class="subBlock"
    >
      <div
        class="title"
      >
        <a
          href="/"
        >
          MyPlace
        </a>
      </div>
      <ul
        class="navigationBlock"
      />
      <button
        class="signin"
        data-testid="logout"
      >
        <a
          href="/user/auth/signin"
        >
          로그인/회원가입
        </a>
      </button>
    </div>
    <div
      class="subBlock"
      data-testid="mobile"
    >
      <ul
        class="bottomNavigationBlock"
      >
        <li
          class="navigationName"
        >
          <a
            href="/findplace"
          >
            장소찾기
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/community/postlist"
          >
            커뮤니티
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/contribute"
          >
            기여하기
          </a>
        </li>
      </ul>
    </div>
    <div
      class="mainBlock"
    >
      <div
        class="subBlock"
      >
        <div
          class="loading"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="loading"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Presentational 테스트 상황 테스트 로그인 안했을경우 1`] = `
<div>
  <header
    class="mainBlock"
  >
    <div
      class="subBlock"
    >
      <div
        class="title"
      >
        <a
          href="/"
        >
          MyPlace
        </a>
      </div>
      <ul
        class="navigationBlock"
      >
        <li
          class="navigationName"
        >
          <a
            href="/findplace"
          >
            장소찾기
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/community/postlist"
          >
            커뮤니티
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/contribute"
          >
            기여하기
          </a>
        </li>
      </ul>
      <button
        class="signin"
        data-testid="logout"
      >
        <a
          href="/user/auth/signin"
        >
          로그인/회원가입
        </a>
      </button>
    </div>
  </header>
</div>
`;

exports[`Header Presentational 테스트 상황 테스트 로그인 하고 마이페이지 창을 열였을 경우 1`] = `
<div>
  <header
    class="mainBlock"
  >
    <div
      class="subBlock"
    >
      <div
        class="title"
      >
        <a
          href="/"
        >
          MyPlace
        </a>
      </div>
      <ul
        class="navigationBlock"
      >
        <li
          class="navigationName"
        >
          <a
            href="/findplace"
          >
            장소찾기
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/community/postlist"
          >
            커뮤니티
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/contribute"
          >
            기여하기
          </a>
        </li>
      </ul>
      <div
        class="userBlock"
        data-testid="login"
      >
        <p
          class="userInfo"
        >
          test
          님 반갑습니다
        </p>
        <button
          aria-label="notice"
          class="notice"
          data-testid="changeNoticeModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.377 10.573a7.63 7.63 0 0 1-.383-2.38V6.195a5.115 5.115 0 0 0-1.268-3.446 5.138 5.138 0 0 0-3.242-1.722c-.694-.072-1.4 0-2.07.227-.67.215-1.28.574-1.794 1.053a4.923 4.923 0 0 0-1.208 1.675 5.067 5.067 0 0 0-.431 2.022v2.2a7.61 7.61 0 0 1-.383 2.37L2 12.343l.479.658h3.505c0 .526.215 1.04.586 1.412.37.37.885.586 1.412.586.526 0 1.04-.215 1.411-.586s.587-.886.587-1.412h3.505l.478-.658-.586-1.77zm-4.69 3.147a.997.997 0 0 1-.705.299.997.997 0 0 1-.706-.3.997.997 0 0 1-.3-.705h1.999a.939.939 0 0 1-.287.706zm-5.515-1.71l.371-1.114a8.633 8.633 0 0 0 .443-2.691V6.004c0-.563.12-1.113.347-1.616.227-.514.55-.969.969-1.34.419-.382.91-.67 1.436-.837.538-.18 1.1-.24 1.65-.18a4.147 4.147 0 0 1 2.597 1.4 4.133 4.133 0 0 1 1.004 2.776v2.01c0 .909.144 1.818.443 2.691l.371 1.113h-9.63v-.012z"
            />
          </svg>
        </button>
        <button
          aria-label="mypage"
          class="mypage"
          data-testid="changePageModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2A10.13 10.13 0 0 0 2 12a10 10 0 0 0 4 7.92V20h.1a9.7 9.7 0 0 0 11.8 0h.1v-.08A10 10 0 0 0 22 12 10.13 10.13 0 0 0 12 2zM8.07 18.93A3 3 0 0 1 11 16.57h2a3 3 0 0 1 2.93 2.36 7.75 7.75 0 0 1-7.86 0zm9.54-1.29A5 5 0 0 0 13 14.57h-2a5 5 0 0 0-4.61 3.07A8 8 0 0 1 4 12a8.1 8.1 0 0 1 8-8 8.1 8.1 0 0 1 8 8 8 8 0 0 1-2.39 5.64z"
            />
            <path
              d="M12 6a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4zm0 6a1.91 1.91 0 0 1-2-2 1.91 1.91 0 0 1 2-2 1.91 1.91 0 0 1 2 2 1.91 1.91 0 0 1-2 2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="mainBlock"
    >
      <nav
        class="subBlock"
      >
        <ul
          class="navListBlock"
        >
          <li
            class="nav"
            data-testid="modalActvieChange0"
          >
            <a
              href="/user/mypage/bookmark"
            >
              북마크
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange1"
          >
            <a
              href="/user/mypage/review"
            >
              작성 후기
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange2"
          >
            <a
              href="/user/mypage/post"
            >
              작성 글
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange3"
          >
            <a
              href="/user/mypage/comment"
            >
              작성 댓글
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange4"
          >
            <a
              href="/user/mypage/infosetting"
            >
              개인정보관리
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange5"
          >
            <a
              href="/user/mypage/password"
            >
              비밀번호 변경
            </a>
          </li>
          <li
            class="nav"
            data-testid="modalActvieChange6"
          >
            <a
              href="/user/mypage/withdrawal"
            >
              회원탈퇴
            </a>
          </li>
          <li
            class="logout"
            data-testid="userLogout"
          >
            로그아웃
          </li>
        </ul>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Header Presentational 테스트 상황 테스트 로그인 했을 경우 1`] = `
<div>
  <header
    class="mainBlock"
  >
    <div
      class="subBlock"
    >
      <div
        class="title"
      >
        <a
          href="/"
        >
          MyPlace
        </a>
      </div>
      <ul
        class="navigationBlock"
      >
        <li
          class="navigationName"
        >
          <a
            href="/findplace"
          >
            장소찾기
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/community/postlist"
          >
            커뮤니티
          </a>
        </li>
        <li
          class="navigationName"
        >
          <a
            href="/contribute"
          >
            기여하기
          </a>
        </li>
      </ul>
      <div
        class="userBlock"
        data-testid="login"
      >
        <p
          class="userInfo"
        >
          test
          님 반갑습니다
        </p>
        <button
          aria-label="notice"
          class="notice"
          data-testid="changeNoticeModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.377 10.573a7.63 7.63 0 0 1-.383-2.38V6.195a5.115 5.115 0 0 0-1.268-3.446 5.138 5.138 0 0 0-3.242-1.722c-.694-.072-1.4 0-2.07.227-.67.215-1.28.574-1.794 1.053a4.923 4.923 0 0 0-1.208 1.675 5.067 5.067 0 0 0-.431 2.022v2.2a7.61 7.61 0 0 1-.383 2.37L2 12.343l.479.658h3.505c0 .526.215 1.04.586 1.412.37.37.885.586 1.412.586.526 0 1.04-.215 1.411-.586s.587-.886.587-1.412h3.505l.478-.658-.586-1.77zm-4.69 3.147a.997.997 0 0 1-.705.299.997.997 0 0 1-.706-.3.997.997 0 0 1-.3-.705h1.999a.939.939 0 0 1-.287.706zm-5.515-1.71l.371-1.114a8.633 8.633 0 0 0 .443-2.691V6.004c0-.563.12-1.113.347-1.616.227-.514.55-.969.969-1.34.419-.382.91-.67 1.436-.837.538-.18 1.1-.24 1.65-.18a4.147 4.147 0 0 1 2.597 1.4 4.133 4.133 0 0 1 1.004 2.776v2.01c0 .909.144 1.818.443 2.691l.371 1.113h-9.63v-.012z"
            />
          </svg>
        </button>
        <button
          aria-label="mypage"
          class="mypage"
          data-testid="changePageModal"
        >
          <svg
            fill="currentColor"
            height="25"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2A10.13 10.13 0 0 0 2 12a10 10 0 0 0 4 7.92V20h.1a9.7 9.7 0 0 0 11.8 0h.1v-.08A10 10 0 0 0 22 12 10.13 10.13 0 0 0 12 2zM8.07 18.93A3 3 0 0 1 11 16.57h2a3 3 0 0 1 2.93 2.36 7.75 7.75 0 0 1-7.86 0zm9.54-1.29A5 5 0 0 0 13 14.57h-2a5 5 0 0 0-4.61 3.07A8 8 0 0 1 4 12a8.1 8.1 0 0 1 8-8 8.1 8.1 0 0 1 8 8 8 8 0 0 1-2.39 5.64z"
            />
            <path
              d="M12 6a3.91 3.91 0 0 0-4 4 3.91 3.91 0 0 0 4 4 3.91 3.91 0 0 0 4-4 3.91 3.91 0 0 0-4-4zm0 6a1.91 1.91 0 0 1-2-2 1.91 1.91 0 0 1 2-2 1.91 1.91 0 0 1 2 2 1.91 1.91 0 0 1-2 2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;
